Highlight week days only.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
                 <div  flex-gt-md="grow" ex-source-code target="input"></div>
             </div>
 
+            <div layout-gt-md="row" layout="column" layout-align-gt-md="center center" >
+                <md-input-container flex-gt-md="30">
+                    <label>Highlight Weekdays Only</label>
+                     <input time="false" date="true" mdc-datetime-picker type="text" id="date"
+                           placeholder="Date"
+                           ng-model="date" min-date="minDate" max-date="maxDate" week-days="true">
+                </md-input-container>
+                <div  flex-gt-md="grow" ex-source-code target="input"></div>
+            </div>
         </md-card-content>
 
     </md-card>
